deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    rollingUpdate:
      maxSurge: 0       
      maxUnavailable: 1 
    type: RollingUpdate 
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: hkotel/mealie:v0.5.6
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
          - name: TZ
            value: "America/Los_Angeles"
        ports:                              # < the ports required (see container documentation)
        - containerPort: 80
          name: http-80
          protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
        - mountPath: /app/data               # < mount location in the container
          name: mealie-storage              # < volumelabel configured earlier in the yaml file
        - mountPath: /app/data.new               # < mount location in the container
          name: mealie-storage-new
      volumes:
      - name: mealie-storage
        persistentVolumeClaim:
          claimName: mealie-storage
      - name: mealie-storage-new
        persistentVolumeClaim:
          claimName: mealie-storage-new
