service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mealie
